--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -190,7 +190,7 @@ ifix-reference-adapter:
   mgramseva-oauth-token-userType: "EMPLOYEE"
   samplejob-frequency: "0 */2 * ? * *"
   spring-quartz-jdbc-initialize-schema: "always"
-  mgramseva-pspcl-vendor-name: "PSPCL001"
+  mgramseva-pspcl-vendor-name: "PSPCLVENDOR"
 
 # core >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
