--- a/deploy-as-code/helm/environments/ci.yaml
+++ b/deploy-as-code/helm/environments/ci.yaml
@@ -54,6 +54,8 @@ jenkins:
       acl: [misdwss*mgramsewa-prod]
     - name: ifix-prod
       acl: [misdwss*mgramsewa-prod]
+    - name: pspcl-prod
+      acl: [misdwss*mgramsewa-prod]
 
        
   master:
