PFM:1968 : Mgramseva Prod update for PSPCL (#752)
* PFM:1968 : Mgramseva Prod update for PSPCL

* PFM:1968 : Mgramseva Prod update for PSPCL

* mgram-prod yml update for pspcl

* Update mgramseva-prod-secrets.yaml

---------

Co-authored-by: debasishchakraborty-egovt <debasish@egovernmets.org>

--- a/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
@@ -66,6 +66,7 @@ cluster-configs:
             citizen-login-password-otp-fixed-value: ENC[AES256_GCM,data:uOfQpY7o,iv:S1VgLViwACYWhuzEq429xyHqeExOF9t+ouxNlEqyJ7g=,tag:zLOIPT0/Bx7/36GDVqRx2Q==,type:str]
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:Syx4/7o4fEpEmHXY+bVBOEVvFFO3IL4MY7N9P5NxPB2TOj0M,iv:EjRKFvgCxsKPy4Kzi/r5uGmMlf2/NRehOX8pwtQlm+g=,tag:QZE9Ulh5BmI1D/WRBPMY/w==,type:str]
+            oauth-mgramseva-password: 
         alertmanager:
             config:
                 global:
