--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -181,6 +181,15 @@ ws-services:
   is-external-workflow-enabled: "true"
 ifix-reference-adapter:
   keycloak-credentials-clientid: "mgram-prod"
+  pspcl-ifix-event-receiver-name: "mgramseva-prod"
+  mgramseva-oauth-token-username: "9019727051"
+  mgramseva-oauth-token-scope: "read"
+  mgramseva-oauth-token-grantType: "password"
+  mgramseva-oauth-token-tenantId: "pb"
+  mgramseva-oauth-token-userType: "EMPLOYEE"
+  samplejob-frequency: "0 */2 * ? * *"
+  spring-quartz-jdbc-initialize-schema: "always"
+  mgramseva-pspcl-vendor-name: "PSPCLVENDOR"
 
 # core >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
