--- a/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
@@ -66,7 +66,7 @@ cluster-configs:
             citizen-login-password-otp-fixed-value: ENC[AES256_GCM,data:uOfQpY7o,iv:S1VgLViwACYWhuzEq429xyHqeExOF9t+ouxNlEqyJ7g=,tag:zLOIPT0/Bx7/36GDVqRx2Q==,type:str]
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:Syx4/7o4fEpEmHXY+bVBOEVvFFO3IL4MY7N9P5NxPB2TOj0M,iv:EjRKFvgCxsKPy4Kzi/r5uGmMlf2/NRehOX8pwtQlm+g=,tag:QZE9Ulh5BmI1D/WRBPMY/w==,type:str]
-            oauth-mgramseva-password: 
+            oauth-mgramseva-password: ENC[AES256_GCM,data:XuYNEVTIsa0=,iv:+GYgNj/iLJUcCVSYY8FyAMEE6ItfYyyVgCeJbjPyMMY=,tag:1oLuOQTf6CbNb9MAuO/J0g==,type:str]
         alertmanager:
             config:
                 global:
@@ -106,8 +106,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-03-24T14:14:18Z"
-    mac: ENC[AES256_GCM,data:9kCH+9WUrum/L3OD2rRevrnqZewIN3OUaYYPOqaxmN3WKAvsaQrIUKW2w8vdvUDNeruHqzHr/rEIU+mjPYcBFBeof9nxjAQUoF2B6FXwjb6DsxRNm/gOuqB/8WXHBbaVMnSZxU5UjHUISNuV77he/PPFzgz8ytajWijfCuSdW+M=,iv:6Sti9plERONVEsngmOaXeqB4rY3PNudPOu1fZIHNN6w=,tag:EjxHEsBkGCPkS4w387KTDw==,type:str]
+    lastmodified: "2023-06-28T08:43:36Z"
+    mac: ENC[AES256_GCM,data:8ja5o8wq03NOLkKZsM8M4EPkRJBYSplhcZ1iR4rnZVWzDFeT+azXMa/JpClatAsk4HWocnD1ErGGs++xV5fjy77RTEiQGwoYGWaoEOcIENlLn/QdX1w9Opplx9raiWhcWoSa2Ob8+4ABCW2XTBkHVB27W0nAR+yAk7XAF8o0dxs=,iv:xjhLkVJUdg+ka6mYCEWa6SUJmTkhR2G3EibD42gGLTo=,tag:iDhpE1YgMYHoguLHYZ3bbw==,type:str]
     pgp:
         - created_at: "2021-11-19T10:24:28Z"
           enc: |
