--- a/deploy-as-code/helm/charts/cluster-configs/values.yaml
+++ b/deploy-as-code/helm/charts/cluster-configs/values.yaml
@@ -8,11 +8,11 @@ cluster-configs:
   root-ingress:
     name: root-ingress
     namespace: mgramseva
-    cert-issuer: "letsencrypt-staging"
+    cert-issuer: letsencrypt-staging
     appRoot: citizen
     serviceName: citizen
     servicePort: 80
- 
+
   nginx-errors:
     enabled: false
     name: nginx-errors
@@ -22,64 +22,64 @@ cluster-configs:
 
   configmaps:
     egov-config:
-      namespace: [ mgramseva ]
+      namespace: mgramseva
       name: egov-config
       server-tomcat-max-connections: "500"
       server-tomcat-max-threads: "10"
       spring-datasource-tomcat-initialSize: "1"
       spring-datasource-tomcat-max-active: "2"
-      spring-jpa-show-sql: "true"  
+      spring-jpa-show-sql: "true"
 
-    egov-service-host:    
+    egov-service-host:
       name: egov-service-host
-      namespace: [ mgramseva ] 
+      namespace: mgramseva
 
   secrets:
-    db: 
-      namespace: [ mgramseva ]
+    db:
+      namespace: mgramseva
       name: db
 
     egov-notification-sms:
       namespace: mgramseva
       name: egov-notification-sms
 
-    egov-filestore: 
+    egov-filestore:
       namespace: mgramseva
-      name: egov-filestore     
-      
-    egov-location: 
+      name: egov-filestore
+
+    egov-location:
       namespace: mgramseva
       name: egov-location
 
-    egov-pg-service: 
+    egov-pg-service:
       namespace: mgramseva
-      name: egov-pg-service                 
+      name: egov-pg-service
 
-    pgadmin: 
+    pgadmin:
       namespace: mgramseva
-      name: pgadmin       
+      name: pgadmin
 
-    egov-enc-service: 
+    egov-enc-service:
       namespace: mgramseva
-      name: egov-enc-service       
+      name: egov-enc-service
 
-    egov-notification-mail: 
+    egov-notification-mail:
       namespace: mgramseva
       name: egov-notification-mail
 
-    home-isolation-notification-mail: 
+    home-isolation-notification-mail:
       namespace: mgramseva
-      name: home-isolation-notification-mail      
+      name: home-isolation-notification-mail
 
-    git-sync: 
-      namespace: [ mgramseva ]
+    git-sync:
+      namespace: mgramseva
       name: git-creds
 
-    kibana: 
+    kibana:
       namespace: mgramseva
-      name: kibana-creds                       
+      name: kibana-creds
 
-    kibana-infra: 
+    kibana-infra:
       namespace: mgramseva
       name: kibana-infra-creds
 
@@ -89,7 +89,7 @@ cluster-configs:
 
     egov-edcr-notification:
       namespace: mgramseva
-      name: egov-edcr-notification 
+      name: egov-edcr-notification
 
     egov-edcr-bank-gateway:
       namespace: mgramseva
@@ -98,7 +98,7 @@ cluster-configs:
     chatbot:
       namespace: mgramseva
       name: chatbot
-    
+
     covid-chatbot:
       namespace: mgramseva
       name: covid-chatbot
@@ -109,32 +109,32 @@ cluster-configs:
 
     oauth2-proxy:
       namespace: mgramseva
-      name: oauth2-proxy   
+      name: oauth2-proxy
 
     case-management:
       namespace: mgramseva
-      name: case-management 
+      name: case-management
 
     keycloak:
       namespace: mgramseva
-      name: keycloak  
-  
+      name: keycloak
+
     minio:
       namespace: mgramseva
       name: minio
 
     alertmanager:
       namespace: mgramseva
-      name: alertmanager-main      
+      name: alertmanager-main
 
     jenkins:
       namespace: jenkins
-      name: jenkins 
-    
+      name: jenkins
+
     mysql:
       namespace: mgramseva
       name: mysql
-    
+
     wordpress:
       namespace: mgramseva
       name: wordpress
