Update mgramseva-prod.yaml (#772)

--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -1,6 +1,6 @@
 global:
   domain: mgramseva-dwss.punjab.gov.in
-  containerRegistry: dwssio
+  #containerRegistry: dwssio
   tracing-enabled: true
   namespace: mgramseva
   nodepool:
