--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -108,7 +108,7 @@ cluster-configs:
         serializers-timezone-in-ist: "true"
         server-tomcat-max-threads: "10"
         server-tomcat-max-connections: "500"
-        sms-enabled: "true"
+        sms-enabled: "false"
         spring-datasource-tomcat-initialSize: "1"
         spring-datasource-tomcat-max-active: "5"
         spring-jpa-show-sql: "true"
@@ -217,11 +217,11 @@ vendor:
 egov-notification-sms:
   sms-provider-url: "https://smsgw.sms.gov.in/failsafe/MLink"
   sms.provider.url: "https://smsgw.sms.gov.in/failsafe/MLink"
-  sms.provider.class: "NIC"
+  sms.provider.class: "Console"
   sms.provider.requestType: "POST"
   sms.provider.contentType:  "application/json"
   sms-config-map: "{'username':'$username', 'pin': '$password', 'signature':'$senderid', 'mnumber':'$mobileno', 'message':'$message', 'smsservicetype':'unicodemsg', 'myParam': '$extraParam' , 'messageType': '$mtype'}"
-  sms-gateway-to-use: "NIC"
+  sms-gateway-to-use: "Console"
   sms-sender: "PBDWSS"
   sms.senderid: "PBDWSS"
   sms-sender-requesttype: "GET"
@@ -238,7 +238,7 @@ egov-notification-sms:
   sms.provider.entityid: "1001842650153206278"
   sms.default.tmplid: "1"
   sms.debug.msggateway: "true"
-  sms.enabled: "true"
+  sms.enabled: "false"
 
 egov-user:
   replicas: 2
