PFM:4128: Added changes to make the sms config based (#779)
* PFM:4128: Added chnages to make the sms config based

* PFM:4128: Added chnages to make the sms config based

* PFM:4128: Added chnages to make the sms config based

* PFM:4128: Added chnages to make the sms config based

* PFM:4128: Added chnages to make the sms config based

* PFM:4128: Added changes to make sms config wise

---------

Co-authored-by: debasishchakraborty-egovt <debasish@egovernmets.org>

--- a/deploy-as-code/helm/charts/municipal-services/ws-calculator/values.yaml
+++ b/deploy-as-code/helm/charts/municipal-services/ws-calculator/values.yaml
@@ -93,6 +93,21 @@ env: |
     value: egov-ws-calculator
   - name: EGOV_METERSERVICE_CREATEMETERCONNECTION
     value: save-ws-meter
+  - name: SMS_DEMAND_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-demand-enabled
+  - name: SMS_PAYMENT_LINK_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-payment-link-enabled
+  - name: SMS_BILL_DOWNLOAD_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-bill-download-enable
   - name: SPRING_KAFKA_PRODUCER_KEY_SERIALIZER
     value: org.apache.kafka.common.serialization.StringSerializer
   - name: SPRING_KAFKA_PRODUCER_VALUE_SERIALIZER
