--- a/deploy-as-code/helm/charts/municipal-services/ws-services/values.yaml
+++ b/deploy-as-code/helm/charts/municipal-services/ws-services/values.yaml
@@ -87,6 +87,31 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: ws-calculator
+  - name: SMS_PENDING_COLLECTION_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-pending-collection-enabled
+  - name: SMS_TODAYS_COLLECTION_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-todays-collection-enabled
+  - name: SMS_EDIT_WATER_CONNECTION_NOTIFICATION_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-edit-water-connection-notification-enabled
+  - name: SMS_PAYMENT_NOTIFICATION_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-payment-notification-enabled
+  - name: SMS_WORKFLOW_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-workflow-enabled
   - name: EGOV_FILESTORE_HOST
     valueFrom:
       configMapKeyRef:
