--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -120,6 +120,7 @@ cluster-configs:
         mongo-db-host: "ifix-prod-db.cluster-cvisvjyknxm1.ap-south-1.docdb.amazonaws.com"
         mongo-db-url: "mongodb://mgramseva:mgramseva_1234@ifix-prod-db.cvisvjyknxm1.ap-south-1.docdb.amazonaws.com:27017/?retryWrites=false"
 
+
     egov-service-host:
       namespace: [mgramseva]
       data:
@@ -239,6 +240,19 @@ egov-notification-sms:
   sms.default.tmplid: "1"
   sms.debug.msggateway: "true"
   sms.enabled: "false"
+  sms-demand-enabled: false
+  sms-payment-link-enabled: false
+  sms-bill-download-enable: false
+  sms-bill-notification-enable: false
+  sms-collection-notification-enabled: false
+  sms-pending-collection-enabled: false
+  sms-todays-collection-enabled: false
+  sms-payment-notification-enabled: false
+  sms-edit-water-connection-notification-enabled: flase
+  sms-workflow-enabled: false
+  sms-expenditure-enabled: false
+  sms-expenditure-mark-bill-enabled: false
+  sms-monthy-summary-enabled: false
 
 egov-user:
   replicas: 2
