--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -122,6 +122,7 @@ cluster-configs:
         mongo-db-host: "ifix-db.cluster-cqqfmghbjssw.ap-south-1.docdb.amazonaws.com"
         mongo-db-url: "mongodb://ifix-db.cluster-cqqfmghbjssw.ap-south-1.docdb.amazonaws.com:27017/?retryWrites=false"
 
+
     egov-service-host:
       namespace: [mgramseva]
       data:
@@ -293,6 +294,19 @@ egov-notification-sms:
   sms-destination-mobile-req-param-name: "mobilenumber"
   sms-message-req-param-name: "message"
   sms-error-codes: "401,403,404,405,406,407,408,409,410,411,412,413,414"
+  sms-demand-enabled: false
+  sms-payment-link-enabled: false
+  sms-bill-download-enable: false
+  sms-bill-notification-enable: false
+  sms-collection-notification-enabled: false
+  sms-pending-collection-enabled: false
+  sms-todays-collection-enabled: false
+  sms-payment-notification-enabled: false
+  sms-edit-water-connection-notification-enabled: flase
+  sms-workflow-enabled: false
+  sms-expenditure-enabled: false
+  sms-expenditure-mark-bill-enabled: false
+  sms-monthy-summary-enabled: false
 
 egov-user:
   replicas: 2
