--- a/deploy-as-code/helm/charts/business-services/billing-service/values.yaml
+++ b/deploy-as-code/helm/charts/business-services/billing-service/values.yaml
@@ -51,6 +51,11 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: egov-apportion-service
+  - name: SMS_BILL_NOTIFICATION_ENABLE
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-bill-notification-enable
   - name: SPRING_KAFKA_CONSUMER_GROUP_ID
     value: bs-persist
   - name: SPRING_KAFKA_PRODUCER_KEY_SERIALIZER
