--- a/deploy-as-code/helm/charts/municipal-services/echallan-services/values.yaml
+++ b/deploy-as-code/helm/charts/municipal-services/echallan-services/values.yaml
@@ -103,6 +103,21 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: billing-service
+  - name: SMS_EXPENDITURE_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-expenditure-enabled
+  - name: SMS_EXPENDITURE_MARK_BILL_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-expenditure-mark-bill-enabled
+  - name: SMS_MONTHY_SUMMARY_ENABLED
+    valueFrom:
+      configMapKeyRef:
+        name: egov-notification-sms
+        key: sms-monthy-summary-enabled 
   - name: EGOV_COLLECTION_SERVICE_CREATE_ENDPOINT
     value: "/collection-services/payments/_create"
   - name: EGOV_COLLECTION_SERVICE_SEARCH
