--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -175,11 +175,23 @@ cluster-configs:
 billing-service:
   memory_limits: 512Mi
   demand.updateurl: '{"WS":"http://ws-calculator.mgramseva:8080/ws-calculator/waterCalculator/_updateDemand"}'
+  sms-bill-notification-enable: false
   
 ws-services:
   memory_limits: 512Mi
   replicas: 5
   is-external-workflow-enabled: "true"
+  sms-pending-collection-enabled: false
+  sms-todays-collection-enabled: false
+  sms-edit-water-connection-notification-enabled: false
+  sms-payment-notification-enabled: false
+  sms-workflow-enabled: false
+
+echallan-services:
+  sms-expenditure-enabled: false
+  sms-expenditure-mark-bill-enabled: false
+  sms-monthy-summary-enabled: false
+
 ifix-reference-adapter:
   keycloak-credentials-clientid: "ifix-uat"
   pspcl-ifix-event-receiver-name: "mgramseva-uat"
@@ -240,19 +252,6 @@ egov-notification-sms:
   sms.default.tmplid: "1"
   sms.debug.msggateway: "true"
   sms.enabled: "true"
-  sms-demand-enabled: false
-  sms-payment-link-enabled: false
-  sms-bill-download-enable: false
-  sms-bill-notification-enable: false
-  sms-collection-notification-enabled: false
-  sms-pending-collection-enabled: false
-  sms-todays-collection-enabled: false
-  sms-payment-notification-enabled: false
-  sms-edit-water-connection-notification-enabled: flase
-  sms-workflow-enabled: false
-  sms-expenditure-enabled: false
-  sms-expenditure-mark-bill-enabled: false
-  sms-monthy-summary-enabled: false
 
 egov-user:
   replicas: 2
@@ -324,6 +323,9 @@ property-services:
 ws-calculator:
  replicas: 3
  memory_limits: 512Mi
+ sms-demand-enabled: false
+ sms-payment-link-enabled: false
+ sms-bill-download-enable: false
 
 egov-localization:
   replicas: 2
