--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -226,9 +226,21 @@ cluster-configs:
 billing-service:
   memory_limits: 512Mi
   demand.updateurl: '{"WS":"http://ws-calculator.mgramseva:8080/ws-calculator/waterCalculator/_updateDemand"}'
+  sms-bill-notification-enable: false
   
 ws-services:
   is-external-workflow-enabled: "true"
+  sms-pending-collection-enabled: false
+  sms-todays-collection-enabled: false
+  sms-edit-water-connection-notification-enabled: false
+  sms-payment-notification-enabled: false
+  sms-workflow-enabled: false
+
+ws-calculator:
+  sms-demand-enabled: false
+  sms-payment-link-enabled: false
+  sms-bill-download-enable: false
+
 ifix-reference-adapter:
   keycloak-credentials-clientid: "mgramseva-qa"
   pspcl-ifix-event-receiver-name: "mgramseva-qa"
@@ -294,19 +306,6 @@ egov-notification-sms:
   sms-destination-mobile-req-param-name: "mobilenumber"
   sms-message-req-param-name: "message"
   sms-error-codes: "401,403,404,405,406,407,408,409,410,411,412,413,414"
-  sms-demand-enabled: false
-  sms-payment-link-enabled: false
-  sms-bill-download-enable: false
-  sms-bill-notification-enable: false
-  sms-collection-notification-enabled: false
-  sms-pending-collection-enabled: false
-  sms-todays-collection-enabled: false
-  sms-payment-notification-enabled: false
-  sms-edit-water-connection-notification-enabled: flase
-  sms-workflow-enabled: false
-  sms-expenditure-enabled: false
-  sms-expenditure-mark-bill-enabled: false
-  sms-monthy-summary-enabled: false
 
 egov-user:
   replicas: 2
@@ -372,6 +371,9 @@ egov-persister:
 echallan-services:
   egov-idgen-challanNum-format: "EB-[fy:yyyy-yy]-[SEQ_EG_ECHALLAN_EXPENSE]"
   java-enable-debug: "true"
+  sms-expenditure-enabled: false
+  sms-expenditure-mark-bill-enabled: false
+  sms-monthy-summary-enabled: false
 
 
 egov-data-uploader:
