--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -1,6 +1,6 @@
 global:
   domain: mgramseva-uat.psegs.in
-  #containerRegistry: dwssio
+  containerRegistry: dwssio
   tracing-enabled: true
   namespace: mgramseva
   nodepool:
@@ -195,7 +195,8 @@ echallan-services:
 ifix-reference-adapter:
   keycloak-credentials-clientid: "ifix-uat"
   pspcl-ifix-event-receiver-name: "mgramseva-uat"
-  mgramseva-oauth-token-username: "9591730579"
+  #mgramseva-oauth-token-username: "9591730579"
+  mgramseva-oauth-token-username: "7349125125"
   mgramseva-oauth-token-scope: "read"
   mgramseva-oauth-token-grantType: "password"
   mgramseva-oauth-token-tenantId: "pb"
