updated cloak secrets for mgramseva-qa (#788)

--- a/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
@@ -67,7 +67,7 @@ cluster-configs:
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:bslhzzr4LtB7ZETnArZY7htSTMc4ZLTYdnjOOFXQwF7047gm,iv:4Um7Xpg/mB9kpeeQWsiAUsXcsHq1WXizE4pqF2x9sJE=,tag:zdJAOzKy8U0PrIGIMGPD1Q==,type:str]
             keycloak-pspcl-clientsecret: ENC[AES256_GCM,data:ocq/ax/6OpoNhwn48v3Z6OQnoKYxU8hmA1POOmUccPBZy3ms,iv:FCszwBAbRcbRJek6bnnQ+wHun4Q3Eq9Z0acaYgWzRY0=,tag:W+qNAskpyJ17mYth6FzeMA==,type:str]
-            oauth-mgramseva-password: ENC[AES256_GCM,data:d+oBhSnkB5YB,iv:2crJT0wvZo3xBnyrN4rmAqRKgs+quUsERsU+xrqjZkg=,tag:tOMZJPMkgIgivvYGxk0T8g==,type:str]
+            oauth-mgramseva-password: ENC[AES256_GCM,data:lUM3/j13f4M=,iv:yNL5AOwUz8F6+5pSmHeY/zY2ckf0J8irHlZjFGasRA0=,tag:/W7dFAcA0TNc+xj7TfEKmA==,type:str]
         alertmanager:
             config:
                 global:
@@ -107,8 +107,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-04-05T11:04:57Z"
-    mac: ENC[AES256_GCM,data:C1QW5HR389KGJ5I5n98hsYR0Y0CtOECoyyG70yyO0Qbx8/yEratFsTrirAptaphTj9hzD0chy0v72OBaKkuQEJi0DbEBVtiqMMuUj2VfQpv3McXT7lPJDsLoSr6LvOGFyKODnO+LmUoqgoaHsGLd9nNat6JwRp9KKh83wPOkkCc=,iv:i7dsFMBvudXt/+x37WrWC+ncqpUIjwNLE7OkUGLPlL4=,tag:zv3+KPhFHn63OOG3KxRJSA==,type:str]
+    lastmodified: "2023-07-20T07:12:36Z"
+    mac: ENC[AES256_GCM,data:+VPmj+GC30MFnvgI9HyUyBWLrLRAfQXektSp9JoVmGzR0YBN4dfBDtCqMZiurxfgMby8qHkB4qKlbBvaN50x6L/JxaPVR9LVhhK7fTK+c07YNqnkJNB/3GM3fHpvMb7zlTdmsDK8AW6gdjcuv/p/VCR9aZ6ADb1J3M46At3VNJQ=,iv:VpVzHwyn62j091bZ7hJ4clFFwedfnHGrxe507XCtEMA=,tag:YgrKMh6KUd0TYuThGBi0QQ==,type:str]
     pgp:
         - created_at: "2021-11-19T10:23:47Z"
           enc: |
