updated vendor owner number in secrets for mgramseva-qa,uat,prod (#791)
* updated vendor owner number in secrets for mgramseva-qa,uat,prod

* updated vendor owner number in secrets for mgramseva-prod

--- a/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
@@ -67,6 +67,9 @@ cluster-configs:
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:Syx4/7o4fEpEmHXY+bVBOEVvFFO3IL4MY7N9P5NxPB2TOj0M,iv:EjRKFvgCxsKPy4Kzi/r5uGmMlf2/NRehOX8pwtQlm+g=,tag:QZE9Ulh5BmI1D/WRBPMY/w==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:XuYNEVTIsa0=,iv:+GYgNj/iLJUcCVSYY8FyAMEE6ItfYyyVgCeJbjPyMMY=,tag:1oLuOQTf6CbNb9MAuO/J0g==,type:str]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:QLVPagRqJ/wA0A==,iv:af5hgFfS/ZgFd18tZzF2LGwTcfiQqCMnR2cSlNZOwR8=,tag:jtiHTCuHt+H5s5FkyumC1A==,type:int]
+        ifix-reference-adapter:
+            vendor-owner-number: ENC[AES256_GCM,data:ILhYzOREWD6YuQ==,iv:EKpaZEwkivntImxZJPFnyo5x9Z8jX81F5lpLy/2a8Hg=,tag:oVGUYSmxSDCSOIVxLIn0cg==,type:int]
         alertmanager:
             config:
                 global:
@@ -106,8 +109,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-06-28T08:43:36Z"
-    mac: ENC[AES256_GCM,data:8ja5o8wq03NOLkKZsM8M4EPkRJBYSplhcZ1iR4rnZVWzDFeT+azXMa/JpClatAsk4HWocnD1ErGGs++xV5fjy77RTEiQGwoYGWaoEOcIENlLn/QdX1w9Opplx9raiWhcWoSa2Ob8+4ABCW2XTBkHVB27W0nAR+yAk7XAF8o0dxs=,iv:xjhLkVJUdg+ka6mYCEWa6SUJmTkhR2G3EibD42gGLTo=,tag:iDhpE1YgMYHoguLHYZ3bbw==,type:str]
+    lastmodified: "2023-07-21T11:16:15Z"
+    mac: ENC[AES256_GCM,data:P5C7R15yfLG+0J55VuYXrw4o8CLF6FSy8MxAh2+lEqjq8rzGkyDOr7dpP/1i0RUKFoTJyVpsA6p5K9acB+aJrmiq6wk89uaDqOdloJiDNxW87iWLuCimoHbU9ckvB1NCV3/DvXQcgdtbEw+SxHJb+rX3s30nx+NTLgjzikAFATA=,iv:mG3Xh4wxcUtLvXvhd43Tm/B7daHWfc34XCC7VOaS9sU=,tag:XQqg3Z2vW50KDP4PXsehjg==,type:str]
     pgp:
         - created_at: "2021-11-19T10:24:28Z"
           enc: |
