--- a/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
@@ -68,6 +68,9 @@ cluster-configs:
             keycloak-clientsecret: ENC[AES256_GCM,data:bslhzzr4LtB7ZETnArZY7htSTMc4ZLTYdnjOOFXQwF7047gm,iv:4Um7Xpg/mB9kpeeQWsiAUsXcsHq1WXizE4pqF2x9sJE=,tag:zdJAOzKy8U0PrIGIMGPD1Q==,type:str]
             keycloak-pspcl-clientsecret: ENC[AES256_GCM,data:ocq/ax/6OpoNhwn48v3Z6OQnoKYxU8hmA1POOmUccPBZy3ms,iv:FCszwBAbRcbRJek6bnnQ+wHun4Q3Eq9Z0acaYgWzRY0=,tag:W+qNAskpyJ17mYth6FzeMA==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:lUM3/j13f4M=,iv:yNL5AOwUz8F6+5pSmHeY/zY2ckf0J8irHlZjFGasRA0=,tag:/W7dFAcA0TNc+xj7TfEKmA==,type:str]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:AB/dAqCcs4VTeg==,iv:+TcPMmIBNB7b5/XoVMZfyhI9u1Cv4PlDDs6QH5JbI/Y=,tag:F9DTUYhjyRSogo/OxUOkkQ==,type:int]
+        ifix-reference-adapter:
+            vendor-owner-number: ENC[AES256_GCM,data:5xicqlPkIc1sfQ==,iv:EOs33frLpyajB0VvCSlAKELlfa8nNSR9O1xOn6f8Qpg=,tag:oT1Rl6zIrzc7oTNAYksXiA==,type:int]
         alertmanager:
             config:
                 global:
@@ -107,8 +110,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-07-20T07:12:36Z"
-    mac: ENC[AES256_GCM,data:+VPmj+GC30MFnvgI9HyUyBWLrLRAfQXektSp9JoVmGzR0YBN4dfBDtCqMZiurxfgMby8qHkB4qKlbBvaN50x6L/JxaPVR9LVhhK7fTK+c07YNqnkJNB/3GM3fHpvMb7zlTdmsDK8AW6gdjcuv/p/VCR9aZ6ADb1J3M46At3VNJQ=,iv:VpVzHwyn62j091bZ7hJ4clFFwedfnHGrxe507XCtEMA=,tag:YgrKMh6KUd0TYuThGBi0QQ==,type:str]
+    lastmodified: "2023-07-21T11:06:10Z"
+    mac: ENC[AES256_GCM,data:7sYWq1hh5XyitaAw1J5j0Sdk8ypSO8y7KVvzb6n8qeG5RpV9SySSMFAzGrHoMd7JC47scJFrlXng5v4HzgeeA4nuddZWKe7tNAJWWX/eB6D8uzmzQZgIvButPJ7rMmP1RlbYbqrJmTJ0vjPss2zHkG9OMX8SopUEVqZI0Qaluw8=,iv:Es68eK1mqtwl2kjjMG7KQwCfEL1oeDeTQf1W9Tgph58=,tag:2hHg4WTYB5KBbTm+Ot/LCg==,type:str]
     pgp:
         - created_at: "2021-11-19T10:23:47Z"
           enc: |
