updated vendor owner number in secrets for mgramseva-prod final (#794)

--- a/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
@@ -67,7 +67,7 @@ cluster-configs:
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:Syx4/7o4fEpEmHXY+bVBOEVvFFO3IL4MY7N9P5NxPB2TOj0M,iv:EjRKFvgCxsKPy4Kzi/r5uGmMlf2/NRehOX8pwtQlm+g=,tag:QZE9Ulh5BmI1D/WRBPMY/w==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:XuYNEVTIsa0=,iv:+GYgNj/iLJUcCVSYY8FyAMEE6ItfYyyVgCeJbjPyMMY=,tag:1oLuOQTf6CbNb9MAuO/J0g==,type:str]
-            mgramseva-oauth-token-username: ENC[AES256_GCM,data:QLVPagRqJ/wA0A==,iv:af5hgFfS/ZgFd18tZzF2LGwTcfiQqCMnR2cSlNZOwR8=,tag:jtiHTCuHt+H5s5FkyumC1A==,type:int]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:zDt45KXdWPeDBg==,iv:HvEXm59JYozNnz65DNxSDIwohiDkCWv/8+77VNRRBTE=,tag:nl51i0hK6/Nc47eT1V6e1A==,type:int]
         ifix-reference-adapter:
             vendor-owner-number: ENC[AES256_GCM,data:ILhYzOREWD6YuQ==,iv:EKpaZEwkivntImxZJPFnyo5x9Z8jX81F5lpLy/2a8Hg=,tag:oVGUYSmxSDCSOIVxLIn0cg==,type:int]
         alertmanager:
@@ -109,8 +109,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-07-21T11:16:15Z"
-    mac: ENC[AES256_GCM,data:P5C7R15yfLG+0J55VuYXrw4o8CLF6FSy8MxAh2+lEqjq8rzGkyDOr7dpP/1i0RUKFoTJyVpsA6p5K9acB+aJrmiq6wk89uaDqOdloJiDNxW87iWLuCimoHbU9ckvB1NCV3/DvXQcgdtbEw+SxHJb+rX3s30nx+NTLgjzikAFATA=,iv:mG3Xh4wxcUtLvXvhd43Tm/B7daHWfc34XCC7VOaS9sU=,tag:XQqg3Z2vW50KDP4PXsehjg==,type:str]
+    lastmodified: "2023-07-21T15:24:28Z"
+    mac: ENC[AES256_GCM,data:lmo5e6EzM8jDT1OYrqc7Bn1F487Gbs8YrO+uoyT7QqQmF/S0xzJsfaGykbKasvJeU/5qLUa3Yas+IATsSu6P+LHf0aCE6yVtPBV6HNDNcElqA2EZofsTe90gkfJGAWm5dSBLd3bks3aRt1uD37/vxKaKW0aIN7NNJh8fETxbloU=,iv:5euXNGpWrWo4odfN8HlnN5NX55OiQfmrFwY2dcdRh8M=,tag:40bNLmpunRWqwDzuPczYtg==,type:str]
     pgp:
         - created_at: "2021-11-19T10:24:28Z"
           enc: |
