updated mgramseva oauth token in mgramseva-prod,qa,uat (#798)

--- a/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod-secrets.yaml
@@ -67,9 +67,9 @@ cluster-configs:
         keycloak:
             keycloak-clientsecret: ENC[AES256_GCM,data:Syx4/7o4fEpEmHXY+bVBOEVvFFO3IL4MY7N9P5NxPB2TOj0M,iv:EjRKFvgCxsKPy4Kzi/r5uGmMlf2/NRehOX8pwtQlm+g=,tag:QZE9Ulh5BmI1D/WRBPMY/w==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:XuYNEVTIsa0=,iv:+GYgNj/iLJUcCVSYY8FyAMEE6ItfYyyVgCeJbjPyMMY=,tag:1oLuOQTf6CbNb9MAuO/J0g==,type:str]
-            mgramseva-oauth-token-username: ENC[AES256_GCM,data:zDt45KXdWPeDBg==,iv:HvEXm59JYozNnz65DNxSDIwohiDkCWv/8+77VNRRBTE=,tag:nl51i0hK6/Nc47eT1V6e1A==,type:int]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:ZwNeBzd1X0JQSA==,iv:LEwacQ08LkU1HDbWO2jKGtn7NpL5PjSIU2zjvqNKo/k=,tag:1gWE6yVxhnSq1td556CqeA==,type:str]
         ifix-reference-adapter:
-            vendor-owner-number: ENC[AES256_GCM,data:ILhYzOREWD6YuQ==,iv:EKpaZEwkivntImxZJPFnyo5x9Z8jX81F5lpLy/2a8Hg=,tag:oVGUYSmxSDCSOIVxLIn0cg==,type:int]
+            vendor-owner-number: ENC[AES256_GCM,data:e1Tmdh1UMGMn+A==,iv:+t9GnHJOHoAAJzXOG72gXzscUb+Qzmp/mWHDt9tewuI=,tag:iYPDle4L+ts0lJuSnv2G/g==,type:str]
         alertmanager:
             config:
                 global:
@@ -109,8 +109,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-07-21T15:24:28Z"
-    mac: ENC[AES256_GCM,data:lmo5e6EzM8jDT1OYrqc7Bn1F487Gbs8YrO+uoyT7QqQmF/S0xzJsfaGykbKasvJeU/5qLUa3Yas+IATsSu6P+LHf0aCE6yVtPBV6HNDNcElqA2EZofsTe90gkfJGAWm5dSBLd3bks3aRt1uD37/vxKaKW0aIN7NNJh8fETxbloU=,iv:5euXNGpWrWo4odfN8HlnN5NX55OiQfmrFwY2dcdRh8M=,tag:40bNLmpunRWqwDzuPczYtg==,type:str]
+    lastmodified: "2023-07-25T10:26:42Z"
+    mac: ENC[AES256_GCM,data:MR5l8lxa4F6YDvjmSO6UO36WL9NHOGjgW1I3i7qys2vWRfR98bQ3K1oBHb4CWIBxdao0Ti0IPg+3/cse8f5gzk15TMGPmTvkYfGHF2UMKUr+Wnp5v3JqLCaf79VfKnuRpP7KO8uJkNZHOy7b0KXwl1e8DJA71wP+GgMO/8L3hIU=,iv:3nRjNwkiw15KqDjmlpmnTETPP9z5SnGFTMMvrhA3rIo=,tag:XI9p9SSRVkvvX1/KOaCYzw==,type:str]
     pgp:
         - created_at: "2021-11-19T10:24:28Z"
           enc: |
