--- a/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa-secrets.yaml
@@ -68,9 +68,9 @@ cluster-configs:
             keycloak-clientsecret: ENC[AES256_GCM,data:bslhzzr4LtB7ZETnArZY7htSTMc4ZLTYdnjOOFXQwF7047gm,iv:4Um7Xpg/mB9kpeeQWsiAUsXcsHq1WXizE4pqF2x9sJE=,tag:zdJAOzKy8U0PrIGIMGPD1Q==,type:str]
             keycloak-pspcl-clientsecret: ENC[AES256_GCM,data:ocq/ax/6OpoNhwn48v3Z6OQnoKYxU8hmA1POOmUccPBZy3ms,iv:FCszwBAbRcbRJek6bnnQ+wHun4Q3Eq9Z0acaYgWzRY0=,tag:W+qNAskpyJ17mYth6FzeMA==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:lUM3/j13f4M=,iv:yNL5AOwUz8F6+5pSmHeY/zY2ckf0J8irHlZjFGasRA0=,tag:/W7dFAcA0TNc+xj7TfEKmA==,type:str]
-            mgramseva-oauth-token-username: ENC[AES256_GCM,data:AB/dAqCcs4VTeg==,iv:+TcPMmIBNB7b5/XoVMZfyhI9u1Cv4PlDDs6QH5JbI/Y=,tag:F9DTUYhjyRSogo/OxUOkkQ==,type:int]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:PzgFpd2DwG/mJg==,iv:wqB5mci7ABWd1KD+itgm/SgHx6fzk05Z4rtr71WwvJ8=,tag:/OHwTrWeonYpKHsbfMu9Kw==,type:str]
         ifix-reference-adapter:
-            vendor-owner-number: ENC[AES256_GCM,data:5xicqlPkIc1sfQ==,iv:EOs33frLpyajB0VvCSlAKELlfa8nNSR9O1xOn6f8Qpg=,tag:oT1Rl6zIrzc7oTNAYksXiA==,type:int]
+            vendor-owner-number: ENC[AES256_GCM,data:LpaczYyJ5jeZEA==,iv:ukQhcn/r+ETOUMHk58q9VVqnnSfaTednAl8AzsAdMZA=,tag:8dhWm0G83iGk1i7Rd6qJWw==,type:str]
         alertmanager:
             config:
                 global:
@@ -110,8 +110,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-07-21T11:06:10Z"
-    mac: ENC[AES256_GCM,data:7sYWq1hh5XyitaAw1J5j0Sdk8ypSO8y7KVvzb6n8qeG5RpV9SySSMFAzGrHoMd7JC47scJFrlXng5v4HzgeeA4nuddZWKe7tNAJWWX/eB6D8uzmzQZgIvButPJ7rMmP1RlbYbqrJmTJ0vjPss2zHkG9OMX8SopUEVqZI0Qaluw8=,iv:Es68eK1mqtwl2kjjMG7KQwCfEL1oeDeTQf1W9Tgph58=,tag:2hHg4WTYB5KBbTm+Ot/LCg==,type:str]
+    lastmodified: "2023-07-25T10:32:11Z"
+    mac: ENC[AES256_GCM,data:eZGtoXFkpOXJhlxe2UasHCCpAMrWa+lgC0r81mVVMZvTdnWGk59nOueJOS/pINz4nhTzWCpW8IJbx7wgj/WM9iMZNU4pDdnZdTrAGC2lP+LK+apF43MD2X09ErVcnUT/Ws2jZmvN9WpTc5nPCPXt81Jd0Z8YJHxSf/6MTDo52hM=,iv:fXXYtj/NOMj85vQhwNi5vD6av7/NyhxHyd5sVqhCCW8=,tag:KKQSdmqJxAEUkLGJybzYFQ==,type:str]
     pgp:
         - created_at: "2021-11-19T10:23:47Z"
           enc: |
