--- a/deploy-as-code/helm/environments/mgramseva-uat-secrets.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat-secrets.yaml
@@ -68,9 +68,9 @@ cluster-configs:
             keycloak-clientsecret: ENC[AES256_GCM,data:nutFTNT8YUlt1mTvSK0z/UaN/y/5lPjD9yytlaWKP41Txpo7,iv:EiwW6dWaB7bAL9qym4fFHlOS5P9Uk1O9KmP25hcY+Ic=,tag:yb/ncYy32U6PFxd31MkEZw==,type:str]
             keycloak-pspcl-clientsecret: ENC[AES256_GCM,data:ELl99e3nJZIAkHkUPMNRguVghck9gLi5k48MGyRiIgJXlDuD,iv:/IaXo6HoySw1Ywy/a5HOgD4LPHswqb5IN4nupJmMOyk=,tag:VxeqFKpS1FzvVcMK3iX6Ag==,type:str]
             oauth-mgramseva-password: ENC[AES256_GCM,data:tMPuhVvii2c=,iv:yznKYPpueUtNNz+pF3YOnqh1C115+1J6h5DmOXtD6sE=,tag:z/WzjHL0KE5jeZNYnTtkhQ==,type:str]
-            mgramseva-oauth-token-username: ENC[AES256_GCM,data:1HC7TBJvNC2VKQ==,iv:PQTiXQ6tmWPh+38BGvziiWAgv5CThzw8mODcCt0Va3s=,tag:zBGnOwqn6FW2TwfVcS1wgA==,type:int]
+            mgramseva-oauth-token-username: ENC[AES256_GCM,data:9kzEBsdSpM6tOQ==,iv:0RlR4YPJL5HbEFLJlhPtNa7vntZP2KhWrVOD4vVfdXU=,tag:+ICP/lkEdp7zOD2GNW2fYA==,type:str]
         ifix-reference-adapter:
-            vendor-owner-number: ENC[AES256_GCM,data:RCO4uhB2iFlaeA==,iv:1F3cio76Dz/urHo85no0UXHXhGxYAK+7Z6pBfYhJDm8=,tag:VxbauogrS8nOaCdTFZvwLg==,type:int]
+            vendor-owner-number: ENC[AES256_GCM,data:kYF3/dW6DFavxg==,iv:M7NZ5WfmxCvN6A42CSprHsR8b3Ow9No35LnaDPpMRsg=,tag:ioqUK+ZmmeC46tBkmEPcjg==,type:str]
         alertmanager:
             config:
                 global:
@@ -110,8 +110,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-07-21T11:07:32Z"
-    mac: ENC[AES256_GCM,data:LVhZGlov8epew1aGGCFvyhtCcN3nQWk7fV2aN4pYtIOxBnupcgXxvFk60f8JoIJmQ+CgL3b+pDnNNVFQzTb9B4VlF5iINyK3I8kEHbIE8FaV3e8Bo1e75tFHoPJTUa5h0GMzpm4kkM7kYQc2UGYSmT+5LNdthME+94SnkaDDrfc=,iv:B6lzQ9IXA9nYbkpBfJUO5dGqVQpGpSf4/6Jlza5dElA=,tag:35ilrzIFcICwDTSfzGkI1A==,type:str]
+    lastmodified: "2023-07-25T10:30:58Z"
+    mac: ENC[AES256_GCM,data:Vhk25Wd5mY6CzUuvPS5cC9vGXkql4hPQvseAMwMEHOe7GegDEDBF5Ryzhw47f8Tp3kfzggRWiD97ha97dh8/31P8UdCQrLxgrfz51n8Lu348Im3LfUDo4LdShrxkGHP92v5Lc4urU9RxYfdjPq0FcYDKs7091E9uKfjRIPq9u80=,iv:vmt4cXSo9J1BYqfOFZ5ydz8BIEQyGbEkzamfiwczNjE=,tag:pjvHFoHmSuODVyad2HbUBg==,type:str]
     pgp:
         - created_at: "2021-11-19T10:23:11Z"
           enc: |
