Update mgramseva-prod.yaml (#801)

--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -175,11 +175,17 @@ billing-service:
   replicas: 2
   memory_limits: 512Mi
   demand.updateurl: '{"WS":"http://ws-calculator.mgramseva:8080/ws-calculator/waterCalculator/_updateDemand"}'
+  sms-bill-notification-enable: false
   
 ws-services:
   replicas: 4
   memory_limits: 512Mi
   is-external-workflow-enabled: "true"
+  sms-pending-collection-enabled: false
+  sms-todays-collection-enabled: false
+  sms-edit-water-connection-notification-enabled: false
+  sms-payment-notification-enabled: false
+  sms-workflow-enabled: false
 ifix-reference-adapter:
   keycloak-credentials-clientid: "mgram-prod"
   pspcl-ifix-event-receiver-name: "mgramseva-prod"
@@ -305,6 +311,9 @@ egov-persister:
 
 echallan-services:
   egov-idgen-challanNum-format: "EB-[fy:yyyy-yy]-[SEQ_EG_ECHALLAN_EXPENSE]"
+  sms-expenditure-enabled: false
+  sms-expenditure-mark-bill-enabled: false
+  sms-monthy-summary-enabled: false
 
 property-services:
  replicas: 4
@@ -313,6 +322,9 @@ property-services:
 ws-calculator:
  replicas: 4
  memory_limits: 512Mi
+ sms-demand-enabled: false
+ sms-payment-link-enabled: false
+ sms-bill-download-enable: false
 
 egov-localization:
   replicas: 2
