PFM-4273: added changes for feedback sms config (#807)
Co-authored-by: debasishchakraborty-egovt <debasish@egovernmets.org>

--- a/deploy-as-code/helm/charts/municipal-services/ws-services/values.yaml
+++ b/deploy-as-code/helm/charts/municipal-services/ws-services/values.yaml
@@ -97,6 +97,8 @@ env: |
     value: {{ index .Values "sms-payment-notification-enabled" | quote }}
   - name: SMS_WORKFLOW_ENABLED
     value: {{ index .Values "sms-workflow-enabled" | quote }}
+  - name: SMS_FEEDBACK_NOTIFICATION_ENABLED
+    value: {{ index .Values "sms-feedback-notification-enabled" | quote }}
   - name: EGOV_FILESTORE_HOST
     valueFrom:
       configMapKeyRef:
