--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -235,6 +235,7 @@ ws-services:
   sms-edit-water-connection-notification-enabled: false
   sms-payment-notification-enabled: false
   sms-workflow-enabled: false
+  sms-feedback-notification-enabled: false
 
 ws-calculator:
   sms-demand-enabled: false
