--- a/deploy-as-code/helm/environments/mgramseva-prod.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-prod.yaml
@@ -186,6 +186,7 @@ ws-services:
   sms-edit-water-connection-notification-enabled: false
   sms-payment-notification-enabled: false
   sms-workflow-enabled: false
+  sms-feedback-notification-enabled: false
 ifix-reference-adapter:
   keycloak-credentials-clientid: "mgram-prod"
   pspcl-ifix-event-receiver-name: "mgramseva-prod"
