--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -186,6 +186,7 @@ ws-services:
   sms-edit-water-connection-notification-enabled: false
   sms-payment-notification-enabled: false
   sms-workflow-enabled: false
+  sms-feedback-notification-enabled: false
 
 echallan-services:
   sms-expenditure-enabled: false
