--- a/deploy-as-code/helm/charts/ifix-services/ifix-department-entity-service/values.yaml
+++ b/deploy-as-code/helm/charts/ifix-services/ifix-department-entity-service/values.yaml
@@ -45,5 +45,7 @@ env: |
         key: adapter-master-data-service
   - name: IFIX_MASTER_DEPARTMENT_CONTEXT_PATH
     value: {{ index .Values "master-department-context-path" | quote }}     
-  - name: SPRING_FLYWAY_ENABLED
-    value: "true"      
+extraEnv:
+  java: |     
+      - name: SPRING_FLYWAY_ENABLED
+        value: "true"          
