--- a/deploy-as-code/helm/charts/ifix-services/adapter-master-data-service/values.yaml
+++ b/deploy-as-code/helm/charts/ifix-services/adapter-master-data-service/values.yaml
@@ -9,6 +9,14 @@ ingress:
   enabled: true
   zuul: true
   context: "adapter-master-data"
+  
+# Init Containers Configs
+initContainers:
+  dbMigration:
+    enabled: true
+    schemaTable: "adapter_master_data_service_schema"
+    image:
+      repository: "adapter-master-data-service-db"
     
 # Container Configs
 image:
