--- a/deploy-as-code/helm/charts/ifix-services/ifix-migration-toolkit/values.yaml
+++ b/deploy-as-code/helm/charts/ifix-services/ifix-migration-toolkit/values.yaml
@@ -42,3 +42,8 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: fiscal-event-service
+  - name: IFIX_MASTER_DATA_SERVICE_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: ifix-master-data-service
