Update values.yaml (#836)
* Update values.yaml

* Update values.yaml

--- a/deploy-as-code/helm/charts/ifix-services/ifix-migration-toolkit/values.yaml
+++ b/deploy-as-code/helm/charts/ifix-services/ifix-migration-toolkit/values.yaml
@@ -5,13 +5,6 @@ labels:
 
 #namespace: ifix
 
-# Init Containers Configs
-initContainers:
-  dbMigration:
-    enabled: true
-    schemaTable: "ifix_migration_toolkit_schema"
-    image:
-      repository: "ifix-migration-toolkit-db"
 
 # Container Configs
 image:
@@ -47,3 +40,9 @@ env: |
       configMapKeyRef:
         name: egov-service-host
         key: ifix-master-data-service
+  - name: ADAPTER_MASTER_DATA_SERVICE_HOST
+    valueFrom:
+      configMapKeyRef:
+        name: egov-service-host
+        key: adapter-master-data-service
+        
