Update mgramseva-uat.yaml (#840)
* Update mgramseva-uat.yaml

* Update mgramseva-uat.yaml

* Update mgramseva-uat.yaml

--- a/deploy-as-code/helm/environments/mgramseva-uat.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-uat.yaml
@@ -335,8 +335,8 @@ ws-calculator:
  replicas: 3
  memory_limits: 512Mi
  sms-demand-enabled: false
- sms-payment-link-enabled: false
- sms-bill-download-enable: false
+ sms-payment-link-enabled: true
+ sms-bill-download-enable: true
 
 egov-localization:
   replicas: 2
