--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -437,7 +437,12 @@ frontend-mgramseva:
       sub_filter  '<head>' '<head>
       <script src=https://s3.ap-south-1.amazonaws.com/mgramseva-dev-assets/firebaseConfigs.js type=text/javascript></script>
       ';"
-      
+mgramseva-digit-ui:
+      custom-js-injection: |
+    sub_filter.conf: "
+      sub_filter  '<head>' '<head>
+      <script src=https://punjab-fsm-filestore-s3.s3.ap-south-1.amazonaws.com/globalConfigs_fsm.js type=text/javascript></script>
+      ';"
 dashboard-analytics:
   config-schema-paths: "file:///work-dir/config-mgramseva/egov-dss-dashboards/dashboard-analytics/*.json"  
   initContainers:
