--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -106,7 +106,7 @@ cluster-configs:
         kafka-infra-brokers: "kafka-v2.mgramseva:9092"
         logging-level-jdbc: "debug"
         mobile-validation-workaround: "true"
-        s3-assets-bucket: "mgramseva-dev-assets"
+        s3-assets-bucket: "(mgramseva-dev-assets|egov-dev-assets)"
         serializers-timezone-in-ist: "true"
         server-tomcat-max-threads: "10"
         server-tomcat-max-connections: "500"
