--- a/deploy-as-code/helm/charts/frontend/mgramseva-digit-ui/values.yaml
+++ b/deploy-as-code/helm/charts/frontend/mgramseva-digit-ui/values.yaml
@@ -1,31 +1,31 @@
 # Common Labels
 labels:
-  app: "mgramseva-digit-ui"
+  app: "mgramseva-web"
   group: "web"
 
 # Ingress Configs
 ingress:
   enabled: true
-  context: "mgramseva-digit-ui"
+  context: "mgramseva-web"
 
 # Init Containers Configs
 initContainers: {}
 
 # Container Configs
 image:
-  repository: "mgramseva-digit-ui"
+  repository: "mgramseva-web"
 replicas: "1"
 httpPort: 80
 healthChecks:
   enabled: true
-  livenessProbePath: "/mgramseva-digit-ui/"
-  readinessProbePath: "/mgramseva-digit-ui/"
+  livenessProbePath: "/mgramseva-web/"
+  readinessProbePath: "/mgramseva-web/"
 
 namespace: mgramseva    
 extraVolumes: |
   - name: js-injection
     configMap:
-      name: mgramseva-digit-ui-js-injection
+      name: mgramseva-web-js-injection
 
 extraVolumeMounts: |
   - mountPath: /etc/nginx/conf.d/sub_filter.conf
