--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -437,7 +437,7 @@ frontend-mgramseva:
       sub_filter  '<head>' '<head>
       <script src=https://s3.ap-south-1.amazonaws.com/mgramseva-dev-assets/firebaseConfigs.js type=text/javascript></script>
       ';"
-mgramseva-digit-ui:
+mgramseva-web:
   custom-js-injection: |
     sub_filter.conf: "
       sub_filter  '<head>' '<head>
