--- a/deploy-as-code/helm/environments/mgramseva-qa.yaml
+++ b/deploy-as-code/helm/environments/mgramseva-qa.yaml
@@ -441,7 +441,7 @@ mgramseva-web:
   custom-js-injection: |
     sub_filter.conf: "
       sub_filter  '<head>' '<head>
-      <script src=https://s3.ap-south-1.amazonaws.com/egov-dev-assets/globalConfigs.js type=text/javascript></script>
+      <script src=https://egov-dev-assets.s3.ap-south-1.amazonaws.com/globalConfigsMgramsewa.js type=text/javascript></script>
       ';"
 dashboard-analytics:
   config-schema-paths: "file:///work-dir/config-mgramseva/egov-dss-dashboards/dashboard-analytics/*.json"  
